# madad-task

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  local.sqlite3  pyproject.toml  requirements.txt  start.sh
bot/: README.md  app.py  loader.py  states.py
bot/cruds/: __init__.py  create.py  get_users.py
bot/data/: users.xlsx
bot/db/: __init__.py  create.py  get_users.py
bot/filters/: __init__.py
bot/handlers/: __init__.py
bot/handlers/errors/: error_handler.py
bot/handlers/users/: __init__.py  admin.py  contact.py  courses.py  echo.py  feedback.py  help.py  register.py  services.py  set_lang.py  shared.py  start.py  term_payment.py
bot/keyboards/inline/: buttons.py
bot/keyboards/reply/: buttons.py
bot/middlewares/: throttling.py
bot/states/: __init__.py  main.py  test.py
bot/utils/: __init__.py  eh.py  google.py  notify_admins.py  pgtoexcel.py  set_bot_commands.py  translations.py  utils.py
bot/utils/db/: post_to_db.py  postgres.py
core/: settings.py  urls.py
core/data/: .env.example  config.py
locale/ar/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
webhook/: admin.py  models.py  serializers.py  urls.py  views.py  webhook.py
webhook/migrations/: 0001_initial.py  0002_alter_botuser_user_id.py  0003_alter_botuser_user_id.py  0004_alter_botuser_options.py  0005_alter_botuser_options.py  0006_alter_botuser_options.py  0007_alter_botuser_user_id_alter_botuser_username.py
(+2 files in other folders)
